Make single-float the torch default, behind fixing the #f matmul kernel first
The GPU spike found a 44x fp32/fp64 gap on the device, which only pays if the
tensors are actually #f. Chasing that turned up a prerequisite nobody had
measured: under --simd, the matrix product is the ONE member where #f is SLOWER
than #d -- 2.0x slower at n=256 and n=512 on the JVM, while add is 1.8x faster
and dot/sum/exp are level. LinalgSimdKernels.matmulF and
JvmSimdVectorTemplate.laMatmulF are plain scalar loops by design, keeping a
double accumulator so the result stays bit-identical to the oracle at both
widths. wasm-GC is unaffected: buildDot keeps lanes AND the f64 accumulator by
widening through f64x2.promote_low_f32x4.

todo-469 records that, plus the two measurements that decide it. Porting wasm's
trick to the JVM is dead: convert(F2D) is 190x slower than the scalar loop it
would replace, on two different input sets -- so the current comment calling it
"the widening a JIT is least likely to intrinsify" badly understates it. f32
lanes with an f32 accumulator is 2.8x faster than the f64 kernel, which would
invert the table, but differs from the oracle by up to 3-4% relative on the
worst near-zero cell. That is ordinary f32 GEMM behavior and it makes matmul
consistent with the #f reduction contract instead of the exception to it -- but
it cannot be done on one backend alone, since wasm would then disagree, and the
scalar defun can never follow (rontolisp has one float type and it is f64).

todo-123 gains that as phase 0: torch defaults to single-float, linalg stays
double. torch mirrors PyTorch, whose default dtype is float32, and linalg is the
cross-backend oracle that inv/solve/det and the calculus examples need. The
existing todo-097 width polymorphism carries an #f tensor through the whole
forward and backward pass, so this is six origination sites (linear's weight and
bias, embedding's table, layer-norm's pair, tensor's own data) behind one
defparameter, not an architectura